# explicit-hoffman-constants

./: .gitignore  README.md  pyproject.toml
experiments/: 01_spiked_model_convergence.py  02_rip_vs_non_rip_convergence.py  03_ista_trajectory_cone_containment.py  04_hoffman_bound_tightness.py  04a_test.py  04b_test.py  05_leverage_interpretability.py  06_selection_stability_analysis.py  07_elastic_net_phase_transition.py  hoffman_bound_analysis.py
experiments/convergence/: rip_vs_non_rip_convergence.py  trajectory_cone_containment.py  trajectory_cone_containment_fista.py
experiments/cross_validation/: sparse_hoffman_distributions.py
experiments/hoffman/: ambient_dimension_scaling.py  cross_leverage_diagnostic.py  elastic_net_hyperparameters.py  hoffman_bound_analysis.py  hoffman_bound_tightness.py  spiked_model_convergence.py
results/01_spiked_model_convergence/data/: spiked_rho_0.000.npz  spiked_rho_0.050.npz  spiked_rho_0.100.npz  spiked_rho_0.300.npz  spiked_rho_0.500.npz  spiked_rho_0.900.npz  spiked_rho_0.950.npz
results/02_rip_vs_non_rip_convergence/data/: AR1_rho0.9_Non-RIP.npz  Gaussian_RIP.npz  Low_Rank_Non-RIP.npz  Partial_DCT_RIP.npz  PowerLaw_decay1.0_Non-RIP.npz  Rademacher_RIP.npz  Sparse_Binary_RIP.npz  Spiked_rho0.9_Non-RIP.npz  Uniform_Subgaussian_RIP.npz
results/04_hoffman_bound_tightness/data/: dimension_scaling.csv  leverage_bound_tightness.csv  leverage_tightness.csv  many_design_comparison.csv  sparsity_scaling.csv  spiked_varying_rho.csv
results/07_phase_transition/: computed_bounds.npz  phase_transition_data.csv
(+81 files in other folders)
